fix toggle main content between mob and desk and adds cursor pointer on mobile

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -4,9 +4,11 @@
   align-items: center;
   overflow: hidden;
   max-height: 768px;
+  cursor: pointer;
 
   @include viewport--lg {
     align-items: flex-start;
+    cursor: default;
   }
 }
 
